Fix display on small screens

--- a/css/blog.css
+++ b/css/blog.css
@@ -280,6 +280,8 @@ nav > .play-cta { margin: 0; padding: 10px 20px; color: white; }
     nav { flex-wrap: wrap; }
     nav > * { flex: 1 0 auto; padding: 10px 15px; text-align: center; }
     nav > .play-cta { display: none; }
+    .toplayer {display: block;}
+    .drawer {text-align: center;}
     .header-wrapper { margin-bottom: -30px; }
 }
 
